--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ header{
     align-items: center;
     min-height: 100vh;
 	background-size: cover;
+	position: relative;
 }
 main{
 	/*background-color: #1b212c;*/
@@ -23,6 +24,12 @@ main{
 	font-family: 'PT Sans', sans-serif;
 	padding-top: 100px;
 	padding-bottom: 100px;
+}
+.img-line{
+	position: absolute;
+	bottom:0;
+	width: 100%;
+	height: 12%;
 }
 .main__wrapper{
 	background-color: rgba(255, 255, 255, 0.7);
@@ -189,4 +196,12 @@ a{
 }
 @keyframes pulsate {
   50% {color: #fff; text-shadow: 0 -1px rgba(0,0,0,.3), 0 0 5px #ffd, 0 0 8px #fff;}
+}
+.portfolio{
+	position: relative;
+}
+.img-line__top{
+	position: absolute;
+	top:0;
+	width: 100%;
 }
