--- a/css/main.css
+++ b/css/main.css
@@ -205,3 +205,9 @@ a{
 	top:0;
 	width: 100%;
 }
+.portfolio-works__dev.javaScript{
+	background-color: yellow;
+	padding-left: 15px;
+	padding-right: 15px;
+	color:black;
+}
