--- a/css/media.css
+++ b/css/media.css
@@ -15,14 +15,17 @@
     max-width: 700px;
 }
 }
-@media(height:1366px){
-.My_works {
-    position: relative;
-    margin-top: 800px;
-    height: 23px;
+
+@media(max-width:1050px){
+.main__wrapper{
+    padding: 15px;
 }
-header{
-    height: 1366px;
+
+}
+@media(max-width:1000px){
+.portfolio-works{
+    flex-direction: column;
+    align-items: center;
 }
 }
 @media(max-width:875px){
@@ -36,6 +39,11 @@ header{
     display: flex;
     flex-direction: column;
 }
+.My_works {
+    padding: 10px 25px;
+    margin-top: 28px;
+    margin-bottom: 25px;
+    }
 .heading{
     margin-top: 30px;
 }
@@ -66,23 +74,25 @@ width: 100%;
     bottom: -253px;
 }
 }
-
-@media(max-width:698px){
-.portfolio {
-   margin-left: 50px;
+@media(max-width:800px){
+main {
+    
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.main__wrapper {
+    
+    margin-left: 50px;
     margin-right: 50px;
+    }
 }
-}
+
 @media(max-width:600px){
 .header{
     padding: 15px;
 
 }
-.My_works {
-    padding: 10px 25px;
-    margin-top: 28px;
-    margin-bottom: 25px;
-    }
+
 body{
     position: relative;
 }
@@ -99,33 +109,37 @@ body{
     max-width: 100%;
 }
 }
-
-@media(max-width:408px){
+@media(max-width:493px){
 .portfolio-works__item img {
-    width: 240px;
-    height: 175px;
+    width: 100%;
+    height: 200px;
 }
-.portfolio-works {
-    max-width: 305px;
+main {
+    
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
+.main__wrapper {
+    
+    margin-left:  15px;
+    margin-right: 15px;
+    }
 }
+
+@media(max-width:400px){
+
+}
+
 @media(max-width:390px){
 .card{
     padding: 30px;
 }
-}
-@media(max-width:359px){
-.portfolio-works__item img {
-    width: 200px;
-    height: 150px;
-}
-.portfolio-works__title h2 {
-    font-size: 10px;
-}
-.portfolio-works {
-    max-width: 260px;
+h1 {
+    
+    font-size: 26px;
 }
 }
+
 
 
 
