--- a/circles/styles.css
+++ b/circles/styles.css
@@ -30,7 +30,9 @@ h1 {
   line-height: 1.4;
   font-size: 4rem;
 }
-
+.newGame.hid{
+  display: flex;
+}
 .screen {
   display: flex;
   flex-direction: column;
@@ -40,12 +42,18 @@ h1 {
   width: 100vw;
   transition: margin 0.5s ease-out;
   background: linear-gradient(90deg, #29323c 0%, #485563 100%);
+  transform: translateX(-100%);
+  position: absolute;
+  left: 0;
+  right: 0;
 }
 
 .screen.up {
-  margin-top: -100vh;
+  transform: translateX(0%);
 }
-
+.newGame{
+  display: none;
+}
 .time-list {
   display: flex;
   flex-wrap: wrap;
