--- a/circles/styles.css
+++ b/circles/styles.css
@@ -7,8 +7,8 @@
 body {
   color: #fff;
   font-family: "Khula", sans-serif;
-  height: 100vh;
-  overflow: hidden;
+  min-height: 100vh;
+  
   margin: 0;
   text-align: center;
 }
@@ -32,6 +32,14 @@ h1 {
 }
 .newGame.hid{
   display: flex;
+  position: absolute;
+    margin-top: 210px;
+    background: transparent;
+    border: 2px solid white;
+    color: white;
+    padding: 10px 15px;
+    font-size: 24px;
+    border-radius: 37px;
 }
 .screen {
   display: flex;
@@ -46,6 +54,7 @@ h1 {
   position: absolute;
   left: 0;
   right: 0;
+  bottom:0;
 }
 
 .screen.up {
@@ -123,4 +132,9 @@ h1 {
   .screen.scroll{
     overflow: scroll;
   }
+}
+@media(max-width:390px){
+.score{
+  font-size: 24px;
+}
 }
