--- a/circles/styles.css
+++ b/circles/styles.css
@@ -7,7 +7,7 @@
 body {
   color: #fff;
   font-family: "Khula", sans-serif;
-  min-height: 100vh;
+  height: 100vh;
   overflow: hidden;
   
   margin: 0;
