--- a/circles/styles.css
+++ b/circles/styles.css
@@ -31,6 +31,10 @@ h1 {
   line-height: 1.4;
   font-size: 4rem;
 }
+h3{
+  position: absolute;
+  bottom: 10px;
+}
 .newGame.hid{
   display: flex;
   position: absolute;
