--- a/circles/styles.css
+++ b/circles/styles.css
@@ -135,11 +135,9 @@ h1 {
   }
   .screen.scroll{
     overflow: scroll;
+    padding-bottom: 100px;
   }
-  h3{
-  position: absolute;
-  bottom: 0;
-}
+ 
 }
 @media(max-width:390px){
 .score{
