--- a/css/media.css
+++ b/css/media.css
@@ -14,6 +14,9 @@
 .portfolio-works {
     max-width: 700px;
 }
+.modal__photo-inner img{
+    max-width: 325px;
+}
 }
 
 @media(max-width:1050px){
@@ -107,6 +110,14 @@ body{
 }
 .card{
     max-width: 100%;
+}
+}
+@media(max-width:545px){
+.modal__photo-inner img{
+    max-width: 100%;
+}
+.card-photo-img{
+    pointer-events: none;
 }
 }
 @media(max-width:493px){
