--- a/tenloc/css/style.css
+++ b/tenloc/css/style.css
@@ -777,7 +777,7 @@ button {
   line-height: normal;
 }
 
-.container--background {
+.wrapper {
   background: -webkit-gradient(linear, left top, left bottom, from(#FFF), to(rgba(217, 217, 217, 0.7)));
   background: -o-linear-gradient(top, #FFF 0%, rgba(217, 217, 217, 0.7) 100%);
   background: linear-gradient(180deg, #FFF 0%, rgba(217, 217, 217, 0.7) 100%);
@@ -1937,7 +1937,7 @@ button {
     font-size: 14px;
     margin-bottom: 39px;
   }
-  .container--background {
+  .wrapper {
     margin-top: -46px;
   }
   .excursions__city {
@@ -2106,7 +2106,7 @@ button {
   }
 }
 @media (max-width: 514px) {
-  .container--background {
+  .wrapper {
     margin-top: 64px;
   }
   .subscription__title {
@@ -2181,7 +2181,7 @@ button {
   .main__often {
     padding-bottom: 60px;
   }
-  .wrapper {
+  .wrapper--bg {
     padding-bottom: 1px;
     background-color: white;
     border-radius: 0px 0px 50px 50px;
