--- a/snake/css/style.css
+++ b/snake/css/style.css
@@ -8,18 +8,71 @@ html{
 body{
 	height: 100vh;
 	font-family: sans-serif;
-
+	
 	position: relative;
+}
+.snake__score{
+	font-family: "Dancing Script", serif;
+	font-style: italic;
+	color: chocolate;
+	font-weight: 800;
+	font-size: 24px;
+	
+	position: absolute;
+	left: 30px;
+	top: 30px;
+}
+.sea img{
+	width: 100%;
+	position: absolute;
+	z-index: 2;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+.sea{
+background-image: url('../images/water.jpg');
+height: 100vh;
+position: absolute;
+	right: 0;
+	left: 0;
+	z-index: 2;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+.area{
+	height: 100vh;
+	background-image: url('../images/desert.jpg');
+	
+	
+	
+	
+	max-width: 1180px;
+  
+	margin: 0 auto;
+	
+    
+	position: absolute;
+	right: 0;
+	left: 0;
+	z-index: 3;
+	
 }
 .area-wrapper{
     background-image: url('../images/grass.jpg');
-    width: 100%;
-    height: 100vh;
-    border: 15px solid blue;
+    max-width: 1130px;
+    height: calc(100vh - 50px);
+	margin: 0 auto;
+	border-radius: 15px;
     background-repeat: no-repeat;
     background-size: cover;
-
-	position: relative;
+	position: absolute;
+	right: 0;
+	left: 0;
+	z-index: 4;
+	top: 25px;
+	
 }
 
 .modal-result-wrapper{
@@ -27,9 +80,10 @@ body{
 	height: 100%;
 	top:0;
 	left:0;
+	z-index: 5;
 	position: absolute;
 	background-color: rgba(0,0,0,0.8);
-
+	
 	display: block;
 }
 .modal-result-wrapper.hidden{
@@ -86,7 +140,12 @@ h1{
     border: 4px solid #fff;
 	
 }
-
+.snake__headWrapper{
+	width: 25px;
+    height: 25px;
+	padding-top: 3px;
+	position: absolute;
+}
 .snake__body{
 	transform: translate(0px,0px);
 	position: absolute;
@@ -106,8 +165,13 @@ h1{
     background-color: black;
     border: none;
     display: flex;
+	
     justify-content: space-around;
 	transform:rotate(90deg);
 	transform-origin: center;
 	
+}
+.snake__body-crocodily--visible{
+	
+	background-color: blueviolet;
 }
