--- a/snake/css/style.css
+++ b/snake/css/style.css
@@ -19,6 +19,7 @@ body{
 	font-size: 24px;
 	
 	position: absolute;
+	z-index: 7;
 	left: 30px;
 	top: 30px;
 }
@@ -50,9 +51,9 @@ position: absolute;
 	height: 100vh;
 	background: url('../images/desert.jpg'),rgba(210, 174, 33, 0.9);
 	background-blend-mode: overlay;
-	-webkit-box-shadow: 32px -54px 65px 89px rgba(210, 174, 33, 0.57);
-	-moz-box-shadow: 32px -54px 65px 89px rgba(210, 174, 33, 0.57);
-	box-shadow: 32px -54px 65px 89px rgba(210, 174, 33, 1), 32px -54px 65px 89px rgba(210, 174, 33, 0.99) inset;;
+	-webkit-box-shadow: 64px -54px 65px 209px rgba(210, 174, 33, 1), 64px -54px 65px 89px rgba(210, 174, 33, 1) inset;
+	-moz-box-shadow: 64px -54px 65px 209px rgba(210, 174, 33, 1), 64px -54px 65px 89px rgba(210, 174, 33, 1) inset;
+	box-shadow: 64px -54px 65px 209px rgba(210, 174, 33, 1), 64px -54px 65px 89px rgba(210, 174, 33, 1) inset;
 	
 	
 	max-width: 1180px;
@@ -68,7 +69,8 @@ position: absolute;
 }
 .area-wrapper{
     background-image: url('../images/grass.jpg');
-    max-width: 1130px;
+    max-width: 1170px;
+	box-shadow: 5px 1px 69px 76px rgba(16, 170, 31, 1), 1px 1px 72px 76px rgba(16, 170, 31, 1) inset;
     height: calc(100vh - 50px);
 	margin: 0 auto;
 	border-radius: 15px;
