--- a/snake/css/style.css
+++ b/snake/css/style.css
@@ -80,6 +80,14 @@ position: relative;
 	height: 25px;
 	position: absolute;
 }
+.food img{
+	width: 20px;
+	height: 20px;
+	position: static;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 .sea{
 
 	min-height: 100vh;
@@ -127,7 +135,7 @@ position: relative;
 	top:0;
 	left:0;
 	z-index: 5;
-	position: absolute;
+	position: fixed;
 	background-color: rgba(0,0,0,0.8);
 	
 	display: block;
@@ -229,10 +237,48 @@ h1{
 }
 .river__up img{
 	transform: rotate(-90deg);
-	position: fixed;
+	position: absolute;
     transform-origin: top;
-    width: 75px;
-    height: 1390px;
-    left: 190px;
-    top: 10px;
+    width: 35px;
+    height: 1325px;
+    left: -75px;
+    top: 0px;
+}
+.bridge__item img{
+	transform: rotate(-270deg);
+	
+    transform-origin: top;
+    width: 125px;
+    height: 200px;
+}
+
+.bridge__item:nth-child(1) img{
+	
+    left: 140px;
+    top: 747px;
+}
+.bridge__item:nth-child(2) img{
+	
+    left: 360px;
+    top: 747px;
+}
+.bridge__item:nth-child(3) img{
+	
+    left: 580px;
+    top: 747px;
+}
+.bridge__item:nth-child(4) img{
+	
+    left: 800px;
+    top: 747px;
+}
+.bridge__item:nth-child(5) img{
+	
+    left: 1020px;
+    top: 747px;
+}
+.bridge__item:nth-child(6) img{
+	
+    left: 1240px;
+    top: 747px;
 }
